codama-macros/tests/codama_attribute/type_nodes/bytes_type_node/with_input.fail.stderr
error: bytes does not accept any input
 --> tests/codama_attribute/type_nodes/bytes_type_node/with_input.fail.rs:3:17
  |
3 | #[codama(type = bytes(foo = 42))]
  |                 ^^^^^^^^^^^^^^^
