codama-macros/tests/codama_attribute/type_nodes/bytes_type_node/with_input.fail.rs
use codama_macros::codama;

#[codama(type = bytes(foo = 42))]
pub struct Test;

fn main() {}
